--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600&family=Poppins:wght@300;400;500;600;700&family=Varela&family=Varela+Round&display=swap');
+
+body {
+    line-height: 1.5;
+    font-family: 'Poppins', sans-serif;
+    background-color: black;
+}
 * {
     margin: 0;
     list-style: none;
@@ -13,6 +20,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 50px;
+    border-bottom: 2px solid #ffdf52;
 }
 .navbar .navbar-left > ul {
     display: flex;
@@ -23,10 +31,28 @@
     align-items: center;
 }
 
+.navbar .search {
+    width: 70%;
+}
+
 .navbar .navbar-left ul li.nf_li {
     margin-left: 25px;
     cursor: pointer;
     position: relative;
+}
+
+.notification-badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 22px;
+    height: 22px;
+    background:white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }
 
 .navbar .navbar-right ul li.nr_li {
@@ -60,4 +86,97 @@
 }
 .navbar .li-main.active .dd-menu{
 	display: flex;
+}
+
+
+.content {
+    border: 3px solid #ffdf52;
+    background: black;
+    
+}
+
+.image-grid .img {
+    width: 18px;
+}
+
+.image-grid .img-bottom {
+    margin-bottom: -168px;
+}
+
+.wrapper .image-grid {
+    position: relative;
+    height: auto;
+    width: 90%;
+    margin: auto;
+    padding: 45px 0;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 2vmin;
+    grid-auto-flow: dense;
+    align-items: flex-end;
+}
+
+.wrapper .image-grid .img {
+    position: relative;
+    height: auto;
+    width: 100%;
+    overflow: hidden;
+    display: block;
+    border-radius: 20px;
+
+}
+
+.bottom-right {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    font-size: 20px;
+    color: white;
+}
+
+.wrapper .image-grid .img:nth-last-child(2) {
+    grid-column-start: span 2;
+}
+
+@media screen and (max-width:500px) {
+    .responsive {
+        padding: 0px 20px;
+    }
+}
+
+/* footer */
+
+footer {
+    background-color: black;
+    color: white;
+    border-top: 2px solid #ffdf52;
+}
+
+.row {
+    width: 100%;
+    height: 60px;
+    background: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 70px;
+}
+
+.column {
+    margin-top: 40px;
+}
+
+.social-column {
+/* 
+    position: relative; */
+    display: flex;
+    justify-content: space-between;
+}
+
+li {
+    font-size: 13px;
+}
+
+span, i {
+    color: #ffdf52;
 }
